<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="backspace">&lt;-</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="point">.</string>
    <string name="cos">cos</string>
    <string name="divide">÷</string>
    <string name="e">e</string>
    <string name="equal">=</string>
    <string name="leftBracket">(</string>
    <string name="ln">ln</string>
    <string name="minus">-</string>
    <string name="mod">mod</string>
    <string name="multiply">×</string>
    <string name="pi">π</string>
    <string name="plus">+</string>
    <string name="power">^</string>
    <string name="rightBracket">)</string>
    <string name="sin">sin</string>
    <string name="sqrt_x">√x</string>
    <string name="cbrt_x">∛x</string>
    <string name="tan">tan</string>
    <string name="log2">log2</string>
    <string name="log10">log10</string>
    <string name="factorial">!</string>
    <string name="three_stars">* * *</string>
    <string name="rand">rand</string>
    <string name="error">Error</string>
    <string name="floor">floor</string>
</resources>
